<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#906745"
    android:contentDescription="@string/content_description_order_coffee"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/OrderCoffeeImageView"
        android:layout_width="195dp"
        android:layout_height="195dp"
        android:layout_marginEnd="21dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/OrderSandwichImageView"
        app:layout_constraintEnd_toStartOf="@+id/OrderDonutImageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/content_description_order_donut"
        app:srcCompat="@drawable/ordercoffeeimage" />

    <ImageView
        android:id="@+id/OrderDonutImageView"
        android:layout_width="195dp"
        android:layout_height="195dp"
        android:contentDescription="@string/content_description_order_donut"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/OrderSandwichImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/OrderCoffeeImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/orderdonutimage" />

    <ImageView
        android:id="@+id/OrderSandwichImageView"
        android:layout_width="195dp"
        android:layout_height="195dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/content_description_order_sandwich"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OrderCoffeeImageView"
        app:srcCompat="@drawable/ordersandwichimage" />

    <ImageView
        android:id="@+id/CurrentOrderImageView"
        android:layout_width="195dp"
        android:layout_height="195dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="21dp"
        android:contentDescription="@string/content_description_current_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/AllOrdersImageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OrderSandwichImageView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/currentorderimage" />

    <ImageView
        android:id="@+id/AllOrdersImageView"
        android:layout_width="195dp"
        android:layout_height="195dp"
        android:layout_marginTop="21dp"
        android:contentDescription="@string/content_description_all_orders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OrderSandwichImageView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/allordersimage" />

    <ImageView
        android:id="@+id/IconImageView"
        android:layout_width="128dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/CurrentOrderImageView"
        app:layout_constraintEnd_toStartOf="@+id/OrderSandwichImageView"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OrderCoffeeImageView"
        android:contentDescription="@string/content_description_icon"
        app:srcCompat="@drawable/icon" />

</androidx.constraintlayout.widget.ConstraintLayout>