<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4C2710"
    tools:context=".CurrentOrderActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="175dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/currentorderpageimage" />

    <ListView
        android:id="@+id/orderListView"
        android:layout_width="386dp"
        android:layout_height="225dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:background="#E5C8A0"
        app:layout_constraintBottom_toTopOf="@+id/subtotalTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/RemoveSelectedItemButton"
        android:layout_width="195dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="27dp"
        android:text="@string/remove_selected_item"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/PlaceOrderButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TotalLabel" />

    <Button
        android:id="@+id/PlaceOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:text="@string/place_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalTextView" />

    <TextView
        android:id="@+id/subtotalTextView"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="105dp"
        android:text="@string/initial_total_amount"
        android:textColor="#E5C8A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderListView" />

    <TextView
        android:id="@+id/taxTextView"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="104dp"
        android:text="@string/initial_total_amount"
        android:textColor="#E5C8A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtotalTextView" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="104dp"
        android:text="@string/initial_total_amount"
        android:textColor="#E5C8A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taxTextView" />

    <TextView
        android:id="@+id/SubTotalLabel"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:text="@string/subtotal_label"
        android:textColor="#E5C8A0"
        app:layout_constraintEnd_toStartOf="@+id/subtotalTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderListView" />

    <TextView
        android:id="@+id/TaxLabel"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="29dp"
        android:text="@string/tax_label"
        android:textColor="#E5C8A0"
        app:layout_constraintEnd_toStartOf="@+id/taxTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SubTotalLabel" />

    <TextView
        android:id="@+id/TotalLabel"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="29dp"
        android:text="@string/total_label"
        android:textColor="#E5C8A0"
        app:layout_constraintEnd_toStartOf="@+id/totalTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TaxLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>